# OpenEXR-Python

./: LICENSE  Pipfile  README.md  build_package.py  pyproject.toml  requirements.txt
.github/workflows/: build_test.yml  check-format.yml  pypi-publish.yml  unit_test.yml
openexr_python/: __init__.py  exr_channel_info.py  exr_channel_sampling_rate.py  exr_header.py  exr_input_file.py  exr_output_file.py  exr_window.py  header.py  util.py
openexr_python/exr_enums/: __init__.py  exr_compression_type.py  exr_enum_base.py  exr_image_data_type.py  exr_line_order_type.py
tests/: __init__.py  test_import.py  test_readwrite.py
